fix broken css

--- a/css/pygment_highlights.css
+++ b/css/pygment_highlights.css
@@ -1,7 +1,7 @@
 /*
   Darkly Pygments Theme
   (c) 2014 Sourcey
-  http://sourcey.com
+  http:
 
 
 .highlight {
@@ -48,66 +48,66 @@
 
 .highlight {
 
-  .c     { color: #5B6370; font-style: italic } // Comment
-  .err   { color: #960050; background-color: #1e0010; } // Error
-  .k     { color: #C776DF; font-weight: bold; } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #5B6370; font-style: italic } // Comment.Multiline
-  .cp    { color: #5B6370; font-weight: bold } // Comment.Preproc
-  .c1    { color: #5B6370; font-style: italic } // Comment.Single
-  .cs    { color: #5B6370; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
-  .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #a00 } // Generic.Error
-  .gh    { color: #5B6370 } // Generic.Heading
-  .gi    { color: #a6e22e; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #a6e22e; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
-  .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { color: #C776DF; font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
-  .m     { color: #4FB6C3 } // Literal.Number
-  .s     { color: #A2BD40 } // Literal.String
-  .na    { color: #E2964A } // Name.Attribute
-  .nb    { color: #4FB6C3 } // Name.Builtin
-  .nc    { color: #E2964A; font-weight: bold } // Name.Class
-  .nd    { color: #4FB6BE; } // Name.Decorator
-  .no    { color: #4FB6BE } // Name.Constant
-  .ni    { color: #E2964A } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #52A5EB; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #DE5442 } // Name.Tag
-  .nv    { color: #DE5442 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #4FB6C3 } // Literal.Number.Float
-  .mh    { color: #4FB6C3 } // Literal.Number.Hex
-  .mi    { color: #4FB6C3 } // Literal.Number.Integer
-  .mo    { color: #4FB6C3 } // Literal.Number.Oct
-  .sb    { color: #A2BD40 } // Literal.String.Backtick
-  .sc    { color: #A2BD40 } // Literal.String.Char
-  .sd    { color: #5B6370 } // Literal.String.Doc
-  .s2    { color: #A2BD40 } // Literal.String.Double
-  .se    { color: #A2BD40 } // Literal.String.Escape
-  .sh    { color: #A2BD40 } // Literal.String.Heredoc
-  .si    { color: #A2BD40 } // Literal.String.Interpol
-  .sx    { color: #A2BD40 } // Literal.String.Other
-  .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #A2BD40 } // Literal.String.Single
-  .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #4FB6C3 } // Literal.Number.Integer.Long
+  .c     { color: #5B6370; font-style: italic }
+  .err   { color: #960050; background-color: #1e0010; }
+  .k     { color: #C776DF; font-weight: bold; }
+  .o     { font-weight: bold }
+  .cm    { color: #5B6370; font-style: italic }
+  .cp    { color: #5B6370; font-weight: bold }
+  .c1    { color: #5B6370; font-style: italic }
+  .cs    { color: #5B6370; font-weight: bold; font-style: italic }
+  .gd    { color: #000; background-color: #fdd }
+  .gd .x { color: #000; background-color: #faa } 
+  .ge    { font-style: italic }
+  .gr    { color: #a00 }
+  .gh    { color: #5B6370 }
+  .gi    { color: #a6e22e; background-color: #dfd }
+  .gi .x { color: #a6e22e; background-color: #afa }
+  .go    { color: #888 }
+  .gp    { color: #555 }
+  .gs    { font-weight: bold }
+  .gu    { color: #aaa }
+  .gt    { color: #a00 }
+  .kc    { font-weight: bold }
+  .kd    { color: #C776DF; font-weight: bold }
+  .kp    { font-weight: bold }
+  .kr    { font-weight: bold }
+  .kt    { color: #458; font-weight: bold }
+  .m     { color: #4FB6C3 }
+  .s     { color: #A2BD40 }
+  .na    { color: #E2964A }
+  .nb    { color: #4FB6C3 }
+  .nc    { color: #E2964A; font-weight: bold }
+  .nd    { color: #4FB6BE; }
+  .no    { color: #4FB6BE }
+  .ni    { color: #E2964A }
+  .ne    { color: #900; font-weight: bold }
+  .nf    { color: #52A5EB; font-weight: bold }
+  .nn    { color: #555 }
+  .nt    { color: #DE5442 }
+  .nv    { color: #DE5442 }
+  .ow    { font-weight: bold }
+  .w     { color: #bbb }
+  .mf    { color: #4FB6C3 }
+  .mh    { color: #4FB6C3 }
+  .mi    { color: #4FB6C3 }
+  .mo    { color: #4FB6C3 }
+  .sb    { color: #A2BD40 }
+  .sc    { color: #A2BD40 }
+  .sd    { color: #5B6370 }
+  .s2    { color: #A2BD40 }
+  .se    { color: #A2BD40 }
+  .sh    { color: #A2BD40 }
+  .si    { color: #A2BD40 }
+  .sx    { color: #A2BD40 }
+  .sr    { color: #009926 }
+  .s1    { color: #A2BD40 }
+  .ss    { color: #990073 }
+  .bp    { color: #999 }
+  .vc    { color: #008080 }
+  .vg    { color: #008080 }
+  .vi    { color: #008080 }
+  .il    { color: #4FB6C3 }
 }
 
 .post-content > .highlight {
